// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag renders correctly 1`] = `
<DocumentFragment>
  .css-1anauza-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 4px;
  padding: 0 8px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #3f4250;
  background: #ffffff;
  border: solid 1px #d9dadd;
}

.css-1olt749-StyledText-StyledText {
  font-size: 12px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 16px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  max-width: 232px;
}

<span
    class="css-1anauza-StyledContainer el6733p2"
  >
    <span
      class="el6733p1 css-1olt749-StyledText-StyledText e13y3mga0"
    >
      test
    </span>
  </span>
</DocumentFragment>
`;

exports[`Tag renders correctly colored 1`] = `
<DocumentFragment>
  .css-144rp8c-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 4px;
  padding: 0 8px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #641cb3;
  background: #f1eefc;
  border: solid 1px #f1eefc;
}

.css-1olt749-StyledText-StyledText {
  font-size: 12px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 16px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  max-width: 232px;
}

<span
    class="css-144rp8c-StyledContainer el6733p2"
  >
    <span
      class="el6733p1 css-1olt749-StyledText-StyledText e13y3mga0"
    >
      test
    </span>
  </span>
</DocumentFragment>
`;

exports[`Tag renders correctly disabled 1`] = `
<DocumentFragment>
  .css-4ijz8s-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 4px;
  padding: 0 8px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #b5b7bd;
  background: #f3f3f4;
  border: solid 1px #e9eaeb;
  cursor: not-allowed;
}

.css-1olt749-StyledText-StyledText {
  font-size: 12px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 16px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  max-width: 232px;
}

<span
    class="css-4ijz8s-StyledContainer el6733p2"
  >
    <span
      class="el6733p1 css-1olt749-StyledText-StyledText e13y3mga0"
    >
      test
    </span>
  </span>
</DocumentFragment>
`;

exports[`Tag renders correctly neutral 1`] = `
<DocumentFragment>
  .css-1anauza-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 4px;
  padding: 0 8px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #3f4250;
  background: #ffffff;
  border: solid 1px #d9dadd;
}

.css-1olt749-StyledText-StyledText {
  font-size: 12px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 16px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  max-width: 232px;
}

<span
    class="css-1anauza-StyledContainer el6733p2"
  >
    <span
      class="el6733p1 css-1olt749-StyledText-StyledText e13y3mga0"
    >
      test
    </span>
  </span>
</DocumentFragment>
`;

exports[`Tag renders correctly with copiable 1`] = `
<DocumentFragment>
  .css-1hzk1lh-StyledChildrenContainer {
  display: inherit;
}

.css-1hzk1lh-StyledChildrenContainer[data-container-full-width='true'] {
  width: 100%;
}

.css-gkklu9-Container-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 4px;
  padding: 0 8px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #3f4250;
  background: #ffffff;
  border: solid 1px #d9dadd;
}

.css-gkklu9-Container-StyledContainer:hover,
.css-gkklu9-Container-StyledContainer:active {
  cursor: pointer;
  background: #e9eaeb;
  border-color: #92959d;
}

.css-gkklu9-Container-StyledContainer:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.css-1olt749-StyledText-StyledText {
  font-size: 12px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 16px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  max-width: 232px;
}

<div
    aria-controls=":r8:"
    aria-describedby=":r8:"
    class="css-1hzk1lh-StyledChildrenContainer e4h1g860"
    tabindex="0"
  >
    <button
      class="css-gkklu9-Container-StyledContainer el6733p3"
    >
      <span
        class="el6733p1 css-1olt749-StyledText-StyledText e13y3mga0"
      >
        test
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Tag renders correctly with icon 1`] = `
<DocumentFragment>
  .css-1anauza-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 4px;
  padding: 0 8px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #3f4250;
  background: #ffffff;
  border: solid 1px #d9dadd;
}

.css-1d5u3w3-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.css-1d5u3w3-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

.css-1olt749-StyledText-StyledText {
  font-size: 12px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 16px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  max-width: 232px;
}

<span
    class="css-1anauza-StyledContainer el6733p2"
  >
    <svg
      class="css-1d5u3w3-sizeStyles e1gt4cfo0"
      viewBox="0 0 16 16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M4.43067 4.4462C4.43067 2.43249 6.06311 0.800049 8.07683 0.800049C10.0905 0.800049 11.723 2.43249 11.723 4.4462V6.38663C12.8527 6.43496 13.7537 7.36613 13.7537 8.50774V13.077C13.7537 14.2495 12.8032 15.2 11.6307 15.2H4.52298C3.35044 15.2 2.3999 14.2495 2.3999 13.077V8.50774C2.3999 7.36613 3.30095 6.43496 4.43067 6.38663V4.4462ZM4.52298 7.58466C4.01318 7.58466 3.5999 7.99794 3.5999 8.50774V13.077C3.5999 13.5868 4.01318 14 4.52298 14H11.6307C12.1405 14 12.5537 13.5868 12.5537 13.077V8.50774C12.5537 7.99794 12.1405 7.58466 11.6307 7.58466H4.52298ZM10.523 6.38466H5.63067V4.4462C5.63067 3.09523 6.72585 2.00005 8.07683 2.00005C9.4278 2.00005 10.523 3.09523 10.523 4.4462V6.38466Z"
        fill-rule="evenodd"
      />
    </svg>
    <span
      class="el6733p1 css-1olt749-StyledText-StyledText e13y3mga0"
    >
      test
    </span>
  </span>
</DocumentFragment>
`;

exports[`Tag renders correctly with isLoading 1`] = `
<DocumentFragment>
  .css-1anauza-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 4px;
  padding: 0 8px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #3f4250;
  background: #ffffff;
  border: solid 1px #d9dadd;
}

.css-1olt749-StyledText-StyledText {
  font-size: 12px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 16px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  max-width: 232px;
}

.css-cmn72i-StyledSvg {
  -webkit-animation: spin 0.75s linear infinite;
  animation: spin 0.75s linear infinite;
}

.css-11f05l0-Loader {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

<span
    class="css-1anauza-StyledContainer el6733p2"
  >
    <span
      class="el6733p1 css-1olt749-StyledText-StyledText e13y3mga0"
    >
      test
    </span>
    <svg
      aria-label="Loading"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      class="css-cmn72i-StyledSvg e1y1n78x1"
      role="progressbar"
      style="height: 16px; width: 16px;"
      viewBox="0 0 100 100"
    >
      <circle
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="#d9dadd"
        stroke-width="16"
      />
      <circle
        class="css-11f05l0-Loader"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="#8c40ef"
        stroke-dasharray="263.89378290154264"
        stroke-dashoffset="211.11502632123413"
        stroke-linecap="round"
        stroke-width="16"
      />
    </svg>
  </span>
</DocumentFragment>
`;

exports[`Tag renders correctly with onClose 1`] = `
<DocumentFragment>
  .css-1anauza-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 4px;
  padding: 0 8px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #3f4250;
  background: #ffffff;
  border: solid 1px #d9dadd;
}

.css-1olt749-StyledText-StyledText {
  font-size: 12px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 16px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  max-width: 232px;
}

.css-sitm2s-StyledGhostButton-StyledCloseButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  padding: 2px;
}

.css-sitm2s-StyledGhostButton-StyledCloseButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-sitm2s-StyledGhostButton-StyledCloseButton:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.css-sitm2s-StyledGhostButton-StyledCloseButton:hover,
.css-sitm2s-StyledGhostButton-StyledCloseButton:active {
  background: #e9eaeb;
  color: #222638;
}

.css-1d5u3w3-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.css-1d5u3w3-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

<span
    class="css-1anauza-StyledContainer el6733p2"
  >
    <span
      class="el6733p1 css-1olt749-StyledText-StyledText e13y3mga0"
    >
      test
    </span>
    <button
      aria-label="Close tag"
      class="el6733p0 css-sitm2s-StyledGhostButton-StyledCloseButton e112qvla0"
      data-testid="close-tag"
      type="button"
    >
      <svg
        class="css-1d5u3w3-sizeStyles e1gt4cfo0"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5.28033 4.21967C4.98744 3.92678 4.51256 3.92678 4.21967 4.21967C3.92678 4.51256 3.92678 4.98744 4.21967 5.28033L6.93934 8L4.21967 10.7197C3.92678 11.0126 3.92678 11.4874 4.21967 11.7803C4.51256 12.0732 4.98744 12.0732 5.28033 11.7803L8 9.06066L10.7197 11.7803C11.0126 12.0732 11.4874 12.0732 11.7803 11.7803C12.0732 11.4874 12.0732 11.0126 11.7803 10.7197L9.06066 8L11.7803 5.28033C12.0732 4.98744 12.0732 4.51256 11.7803 4.21967C11.4874 3.92678 11.0126 3.92678 10.7197 4.21967L8 6.93934L5.28033 4.21967Z"
        />
      </svg>
    </button>
  </span>
</DocumentFragment>
`;
